[gd_scene load_steps=4 format=2]

[ext_resource path="res://Textures/enemyShip.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 19.2506
height = 59.0264

[node name="Enemy" type="Area2D"]
script = ExtResource( 2 )
minSpeed = 100
maxSpeed = 150

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="FiringPositions" type="Node2D" parent="."]

[node name="LeftGun" type="Node2D" parent="FiringPositions"]
position = Vector2( -22, 35 )

[node name="RightGun" type="Node2D" parent="FiringPositions"]
position = Vector2( 22, 35 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="EnemyShotTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
